--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Alane Parisot",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "mongoose": "^5.0.14"
