--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server/server.js",
     "start-watch": "nodemon server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.spec.js --timeout 10000",
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "author": "Alane Parisot",
   "license": "MIT",
@@ -17,6 +18,9 @@
     "mongoose": "^5.0.14"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.1.0",
+    "moxios": "^0.4.0",
     "nodemon": "^1.17.3"
   }
 }
