--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/server.js",
     "start-watch": "nodemon server/server.js",
-    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.spec.js --timeout 10000",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && nyc mocha server/**/*.spec.js --timeout 5000",
     "test-watch": "nodemon --exec \"npm test\""
   },
   "author": "Alane Parisot",
@@ -21,6 +21,7 @@
     "chai": "^4.1.2",
     "mocha": "^5.1.0",
     "moxios": "^0.4.0",
-    "nodemon": "^1.17.3"
+    "nodemon": "^1.17.3",
+    "nyc": "^11.6.0"
   }
 }
