--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/server.js",
     "start-watch": "nodemon server/server.js",
-    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && nyc mocha server/**/*.spec.js --timeout 5000",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && nyc mocha server/test/**/*.js --timeout 5000",
     "test-watch": "nodemon --exec \"npm test\""
   },
   "author": "Alane Parisot",
