--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-.idea/
+# Code Coverage
 .nyc_output/
-node_modules/
+.coveralls.yml
 
+# Config
 server/config/config.json
+
+# IDE
+.idea/
+
+# NPM
+node_modules/
