--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server/server.js",
     "start-watch": "nodemon server/server.js",
     "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && nyc mocha server/test/**/*.js --timeout 5000",
-    "test-watch": "nodemon --exec \"npm test\""
+    "test-watch": "nodemon --exec \"npm test\"",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "author": "Alane Parisot",
   "license": "MIT",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "mocha": "^5.1.0",
     "moxios": "^0.4.0",
     "nodemon": "^1.17.3",
