--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server/server.js",
     "start-watch": "nodemon server/server.js",
     "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && nyc --reporter=html --reporter=text mocha --exit server/test/**/*.js",
-    "test-watch": "nodemon --exec \"npm test\"",
+    "test-watch": "export NODE_ENV=test || SET \"NODE_ENV=test\" && nodemon --exec mocha --exit server/test/**/*.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "author": "Alane Parisot",
